Update for Maintainer Dispatches

--- a/index.hbs
+++ b/index.hbs
@@ -4,9 +4,13 @@
 main {
     counter-reset: issue calc(1 + {{#get "posts" filter="primary_tag:dispatches"}}{{pagination.total}}{{/get}});
 }
-.tag-dispatches .post-meta::after {
+.tag-dispatches:not(.tag-maintainer) .post-meta::after {
     counter-increment: issue -1;
     content: "— Cryptography Dispatches #" counter(issue);
+}
+.tag-dispatches.tag-maintainer .post-meta::after {
+    counter-increment: issue -1;
+    content: "— Maintainer Dispatches #" counter(issue);
 }
 </style>
 
