--- a/post.hbs
+++ b/post.hbs
@@ -16,7 +16,18 @@
         {{#has tag="dispatches"}}
         <aside class="dispatches-cta">
             <p>
-                This is an issue of Cryptography Dispatches, my lightly edited newsletter on cryptography engineering.
+                This is an issue of
+                {{#has tag="maintainer"}}
+                Maintainer Dispatches,
+                {{else}}
+                Cryptography Dispatches,
+                {{/has}}
+                my lightly edited newsletter on 
+                {{#has tag="maintainer"}}
+                professional Open Source maintenance.
+                {{else}}
+                cryptography engineering.
+                {{/has}}
                 <a href="#/portal/signup">Subscribe via email</a> or <a href="https://words.filippo.io/dispatches/rss/">RSS</a>.
             </p>
         </aside>
