--- a/post.hbs
+++ b/post.hbs
@@ -36,5 +36,10 @@
             {{content}}
         </section>
     </article>
+    <form data-members-form>
+        <p>Subscribe to Cryptography Dispatches to hear more about cryptography engineering and professional Open Source maintenance. You can also <a href="/dispatches/">read the archives</a> or <a href="/dispatches/rss/">subscribe with RSS</a>.</p>
+        <input data-members-email type="email" required="true" placeholder="alice@example.com" style="width: 100%;padding: 0.75rem;font-size: 1rem;font-family: inherit;border-radius: 0.5rem; border: black solid 1px;box-sizing: border-box;text-align: center;">
+        <button type="submit" style="border: 0;border-radius: 0.25rem;background: black;color: white;font-family: inherit;font-size: 1rem;line-height: 1.2;white-space: nowrap;text-decoration: none;padding: 0.75rem; cursor: pointer;margin-top: 1rem;width: 100%;box-sizing: border-box;">Subscribe</button>
+    </form>
     {{/post}}
 </main>
