--- a/index.hbs
+++ b/index.hbs
@@ -27,4 +27,5 @@ main {
         <h1 class="post-title"><a href="{{url}}">{{title}}</a></h1>
     </article>
     {{/foreach}}
+    {{> "subscribe"}}
 </main>
