Update newsletter home

--- a/partials/subscribe.hbs
+++ b/partials/subscribe.hbs
@@ -6,8 +6,7 @@
         <a href="/dispatches/rss/">subscribe with RSS</a>.
     </p>
     <p class="almost-done">
-        Thank you! You're almost done, click the link in your inbox to confirm your email
-        and confirm your subscription.
+        Thank you! You're almost done, click the link in your inbox to confirm your email.
     </p>
     <input data-members-email type="email" required="true" placeholder="alice@example.com">
     <button type="submit">Subscribe</button>
