--- a/index.hbs
+++ b/index.hbs
@@ -19,6 +19,14 @@ main {
 </a></header>
 
 <main class="index">
+    {{#has slug="dispatches"}}
+    <p>
+        Cryptography Dispatches is my lightly edited newsletter on cryptography engineering.
+        Maintainer Dispatches is a spin-off discussing professional Open Source maintenance.
+        You can <a href="#/portal/signup">subscribe via email</a> or
+        <a href="https://words.filippo.io/dispatches/rss/">RSS</a> to either or both.
+    </p>
+    {{/has}}
     {{#foreach posts}}
     <article class="{{post_class}}">
         <span class="post-meta">
@@ -27,5 +35,4 @@ main {
         <h1 class="post-title"><a href="{{url}}">{{title}}</a></h1>
     </article>
     {{/foreach}}
-    {{> "subscribe"}}
 </main>
