--- a/index.hbs
+++ b/index.hbs
@@ -19,6 +19,7 @@ main {
 </a></header>
 
 <main class="index">
+    {{name}}
     {{#match name "=" "dispatches"}}
     <p>
         Cryptography Dispatches is my lightly edited newsletter on cryptography engineering.
