--- a/index.hbs
+++ b/index.hbs
@@ -19,15 +19,14 @@ main {
 </a></header>
 
 <main class="index">
-    {{name}}
-    {{#match name "=" "dispatches"}}
+    <!-- {{#match name "=" "dispatches"}}
     <p>
         Cryptography Dispatches is my lightly edited newsletter on cryptography engineering.
         Maintainer Dispatches is a spin-off discussing professional Open Source maintenance.
         You can <a href="#/portal/signup">subscribe via email</a> or
         <a href="https://words.filippo.io/dispatches/rss/">RSS</a> to either or both.
     </p>
-    {{/match}}
+    {{/match}} -->
     {{#foreach posts}}
     <article class="{{post_class}}">
         <span class="post-meta">
