Update subscribe CTA

--- a/partials/subscribe.hbs
+++ b/partials/subscribe.hbs
@@ -1,13 +1,10 @@
-<form data-members-form="subscribe" class="footer-cta">
-    <p>
-        Subscribe to Cryptography Dispatches to hear more about cryptography engineering and
-        professional Open Source maintenance. You can also
-        <a href="/dispatches/">read the archives</a> or
-        <a href="/dispatches/rss/">subscribe with RSS</a>.
-    </p>
+<form data-members-form="subscribe" class="subscribe-cta">
+    <div>
+        Subscribe to Cryptography Dispatches for more!
+    </div>
     <p class="almost-done">
         Thank you! You're almost done, click the link in your inbox to confirm your email.
     </p>
-    <input data-members-email type="email" required="true" placeholder="alice@example.com">
+    <input data-members-email type="email" required="true" placeholder="Type your email...">
     <button type="submit">Subscribe</button>
 </form>
