--- a/assets/css/new.css
+++ b/assets/css/new.css
@@ -132,7 +132,6 @@ blockquote {
     margin-left: 16px;
     margin-right: 16px;
     padding-bottom: 0;
-    margin-bottom: 0;
   }
 
   ul {
@@ -144,7 +143,12 @@ blockquote {
   }
 }
 
-.footer-cta input {
+.subscribe-cta div {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.subscribe-cta input {
   width: 100%;
   padding: 0.75rem;
   font-size: 1rem;
@@ -155,7 +159,7 @@ blockquote {
   text-align: center;
 }
 
-.footer-cta button {
+.subscribe-cta button {
   border: 0;
   border-radius: 0.25rem;
   background: black;
@@ -172,15 +176,14 @@ blockquote {
   box-sizing: border-box;
 }
 
-.footer-cta .almost-done {
+.subscribe-cta .almost-done {
   display: none;
 }
 
-.footer-cta.success .almost-done {
+.subscribe-cta.success .almost-done {
   display: initial;
 }
-
-.footer-cta.success button, .footer-cta.success input {
+.subscribe-cta.success button, .subscribe-cta.success input {
   display: none;
 }
 
