--- a/assets/css/new.css
+++ b/assets/css/new.css
@@ -132,6 +132,7 @@ blockquote {
     margin-left: 16px;
     margin-right: 16px;
     padding-bottom: 0;
+    margin-bottom: 0;
   }
 
   ul {
@@ -143,9 +144,14 @@ blockquote {
   }
 }
 
+.subscribe-cta {
+  margin-bottom: 1.65;
+}
+
 .subscribe-cta div {
   text-align: center;
   margin-bottom: 1rem;
+  font-weight: bold;
 }
 
 .subscribe-cta input {
