--- a/partials/subscribe.hbs
+++ b/partials/subscribe.hbs
@@ -1,10 +1,5 @@
 <form data-members-form="subscribe" class="subscribe-cta">
-    <div>
-        Subscribe to Cryptography Dispatches for more!
-    </div>
-    <p class="almost-done">
-        Thank you! You're almost done, click the link in your inbox to confirm your email.
-    </p>
+    <div>Subscribe to Cryptography Dispatches for more!</div>
     <input data-members-email type="email" required="true" placeholder="Type your email...">
     <button type="submit">Subscribe</button>
 </form>
