--- a/index.hbs
+++ b/index.hbs
@@ -27,6 +27,7 @@ main {
         <a href="https://words.filippo.io/dispatches/rss/">RSS</a> to either or both.
     </p>
     {{/match}} -->
+    {{> "subscribe"}}
     {{#foreach posts}}
     <article class="{{post_class}}">
         <span class="post-meta">
@@ -35,4 +36,5 @@ main {
         <h1 class="post-title"><a href="{{url}}">{{title}}</a></h1>
     </article>
     {{/foreach}}
+    {{> "subscribe"}}
 </main>
