--- a/post.hbs
+++ b/post.hbs
@@ -39,9 +39,9 @@
     {{> "subscribe"}}
     <script>
         const h2first = document.querySelector(".post-content > h2:first-of-type")
-        h2.parentElement.insertBefore(document.getElementsByClassName("subscribe-cta")[0].cloneNode(true), h2first)
+        h2first.parentElement.insertBefore(document.getElementsByClassName("subscribe-cta")[0].cloneNode(true), h2first)
         const h2last = document.querySelector("h2#the-picture")
-        if (h2last) h2.parentElement.insertBefore(document.getElementsByClassName("subscribe-cta")[0].cloneNode(true), h2last)
+        if (h2last) h2last.parentElement.insertBefore(document.getElementsByClassName("subscribe-cta")[0].cloneNode(true), h2last)
     </script>
     {{/post}}
 </main>
