--- a/assets/css/new.css
+++ b/assets/css/new.css
@@ -89,6 +89,7 @@ h1 {
   font-size: 2.5em;
   text-transform: uppercase;
   font-weight: 500;
+  margin-bottom: 2em;
 }
 
 blockquote {
@@ -99,6 +100,7 @@ blockquote {
 
 .index h1 {
   font-size: 1.5em;
+  margin-bottom: 1em;
 }
 
 .index h1 a {
