--- a/post.hbs
+++ b/post.hbs
@@ -1,7 +1,12 @@
 {{!< default}}
-<header><a href="https://filippo.io">
-    Filippo Valsorda
-</a></header>
+<a href="https://filippo.io">
+    <div style="max-width: 350px; padding: 0 10px; margin: 0 auto;">
+    <picture>
+        <source srcset="https://words.filippo.io/content/images/2023/02/Logo-Bianco-Filippo-Valsorda-def-web.png" media="(prefers-color-scheme: dark)">
+        <img src="https://words.filippo.io/content/images/2023/02/Logo-Nero-Filippo-Valsorda-def-web.png" alt="Filippo Valsorda" style="max-width: 100%;">
+    </picture>
+    </div>
+</a>
 
 <main>
     {{#post}}
