--- a/post.hbs
+++ b/post.hbs
@@ -1,12 +1,10 @@
 {{!< default}}
-<a href="https://filippo.io">
-    <div style="max-width: 350px; padding: 0 10px; margin: 0 auto;">
-    <picture>
+<header><a href="https://filippo.io">
+    <div><picture>
         <source srcset="https://words.filippo.io/content/images/2023/02/Logo-Bianco-Filippo-Valsorda-def-web.png" media="(prefers-color-scheme: dark)">
-        <img src="https://words.filippo.io/content/images/2023/02/Logo-Nero-Filippo-Valsorda-def-web.png" alt="Filippo Valsorda" style="max-width: 100%;">
-    </picture>
-    </div>
-</a>
+        <img src="https://words.filippo.io/content/images/2023/02/Logo-Nero-Filippo-Valsorda-def-web.png" alt="Filippo Valsorda">
+    </picture></div>
+</a></header>
 
 <main>
     {{#post}}
