Match logo font

--- a/assets/css/new.css
+++ b/assets/css/new.css
@@ -23,7 +23,9 @@ h4,
 h5,
 h6 {
   color: #2e2e2e;
-  font-family: "Bitter", sans-serif;
+  font-family: "Libre Bodoni", sans-serif;
+  font-variant: small-caps;
+  letter-spacing: .04em;
   line-height: 1.3em;
   margin: 0 0 0.4em 0;
 }
