--- a/index.hbs
+++ b/index.hbs
@@ -14,9 +14,12 @@ main {
 }
 </style>
 
-<header><a href="https://filippo.io">
-    Filippo Valsorda
-</a></header>
+<header>
+    <div><a href="https://filippo.io"><picture>
+        <source srcset="https://words.filippo.io/content/images/2023/02/Logo-Bianco-Filippo-Valsorda-def-web.png" media="(prefers-color-scheme: dark)">
+        <img src="https://words.filippo.io/content/images/2023/02/Logo-Nero-Filippo-Valsorda-def-web.png" alt="Filippo Valsorda">
+    </picture></a></div>
+</header>
 
 <main class="index">
     <!-- {{#match name "=" "dispatches"}}
