--- a/assets/fonts/new.css
+++ b/assets/fonts/new.css
@@ -35,21 +35,11 @@
 }
 
 @font-face {
-  font-family: 'Bitter';
+  font-family: 'Libre Bodoni';
   font-style: normal;
-  font-weight: 500;
+  font-weight: 400;
   src: local(''),
-       url('bitter-v19-latin-500.woff2') format('woff2'),
-       url('bitter-v19-latin-500.woff') format('woff');
-}
-
-@font-face {
-  font-family: 'Bitter';
-  font-style: normal;
-  font-weight: 600;
-  src: local(''),
-       url('bitter-v19-latin-600.woff2') format('woff2'),
-       url('bitter-v19-latin-600.woff') format('woff');
+       url('bodoni-latin-400.woff') format('woff');
 }
 
 @font-face {
