--- a/post.hbs
+++ b/post.hbs
@@ -1,10 +1,10 @@
 {{!< default}}
-<header>
-    <div><a href="https://filippo.io"><picture>
+<header><a href="https://filippo.io">
+    <div><picture>
         <source srcset="https://words.filippo.io/content/images/2023/02/Logo-Bianco-Filippo-Valsorda-def-web.png" media="(prefers-color-scheme: dark)">
         <img src="https://words.filippo.io/content/images/2023/02/Logo-Nero-Filippo-Valsorda-def-web.png" alt="Filippo Valsorda">
-    </picture></a></div>
-</header>
+    </picture></div>
+</a></header>
 
 <main>
     {{#post}}
