--- a/default.hbs
+++ b/default.hbs
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="{{asset "css/new.css"}}">
     <link rel="stylesheet" href="{{asset "fonts/new.css"}}">
 
+    <link href="https://abyssdomain.expert/@filippo" rel="me">
+    <link href="https://bsky.app/profile/filippo.abyssdomain.expert" rel="me">
+
     {{ghost_head}}
 </head>
 
